--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@diegoh/template-nodejs",
-  "version": "1.2.1",
+  "name": "@diegoh/api-middleware-response-time",
+  "version": "1.0.0",
   "description": "Template project for node projects",
   "main": "./src/index.js",
   "scripts": {
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/diegoh/template-nodejs.git"
+    "url": "git+https://github.com/diegoh/api-middleware-response-time.git"
   },
   "author": "Diego Herrera",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/diegoh/template-nodejs/issues"
+    "url": "https://github.com/diegoh/api-middleware-response-time/issues"
   },
-  "homepage": "https://github.com/diegoh/template-nodejs#readme",
+  "homepage": "https://github.com/diegoh/api-middleware-response-time#readme",
   "devDependencies": {
     "@diegoh/eslint-config-node": "^1.0.0",
     "husky": "^3.1.0",
