--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,8 +1,6 @@
-name: Test
-on:
-  pull_request:
-    branches:
-      - master
+name: Coverage
+
+on: push
 
 jobs:
   build:
@@ -10,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12, 13]
+        node-version: [14]
 
     steps:
       - uses: actions/checkout@v1
@@ -20,7 +18,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
-          scope: '@diegoh'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -36,11 +33,12 @@ jobs:
 
       - name: dependencies
         run: npm ci
+
+      - name: Test and Publish Coverage
+        uses: paambaati/codeclimate-action@v2.6.0
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: lint
-        run: npm run lint
-
-      - name: test:coverage
-        run: npm run test:coverage
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: npm run test:coverage
+          coverageLocations: |
+            ${{github.workspace}}/misc/.coverage/lcov.info:lcov
