--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,16 +1,17 @@
-name: Publish
+name: Publish NPM - PUBLIC
+
 on:
   push:
     branches:
       - master
 
 jobs:
-  release:
+  npm:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [12]
+        node-version: [14]
 
     steps:
       - uses: actions/checkout@v1
@@ -28,7 +29,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: publish npm package
-        run: npm publish
+      - name: publish npm (PUBLIC)
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
